--- a/orbit-api/package.json
+++ b/orbit-api/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "orbit-api",
+  "name": "orbit-api-nexus",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nexus dev",
+    "build": "nexus build"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.14.4",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-jwt": "^5.3.3",
-    "graphql": "^14.7.0",
-    "graphql-tools": "^6.0.10",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.9.13",
-    "nexus": "^0.25.0"
+    "nexus": "^0.25.0",
+    "nexus-plugin-jwt-auth": "^1.2.0",
+    "nexus-plugin-prisma": "^0.16.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/jwt-decode": "^2.2.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.0"
   }
 }
